test(seed): 시나리오·파일·멱등성 검증 강화
- AI팀 지원 locale 15개와 국적 조합을 검증한다
- 복합 업무 시나리오의 순서와 의존 관계를 확인한다
- 데모 PDF의 메타데이터와 Task·Worker 연결을 검증한다
- 동일 크기 파일의 SHA-256 충돌 감지를 확인한다
- Worker 핵심 데이터를 재실행 불변성 snapshot에 포함한다